css/style.css
/* @import url('C:/projects/music-app/reset.scss'); */

* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
}

:root {
    font-size: 14px;

    
    /* --secondary-color: #24243C;
    --accent-color: #343757; */
    --prime-color: #FBFBFB;
}
a {
    cursor: pointer;
    display: flex;
    align-items: center;
}

html {
    height: 100%;
}
body {
    /* background-color: var(--prime-color); */
    width: 100%;
    min-height: 100%;
    background-color: var(--prime-color);
}

main {
    width: 100%;
    min-height:0px;
}
/* ++++++++++++++++++++++++++ Header start ++++++++++++++++++++++++++++++++++++++++++++++++++++++ */
header{
    width: 100%;
    height: 151px;
    display: flex;
    padding-top: 40px;
    padding-left: 40px;
    padding-right: 40px;
    outline: #141529;
    display: flex;
    flex-direction: column;
    justify-content: space-between;
    align-items: center;
}

.nav-wrap {
    width: 100%;
    height: fit-content;
    display: flex;
    flex-direction: row;
    align-items: center;
    justify-content: space-between;

}
.icon {
    width: 30px;
    height: 30px;
    cursor: pointer;
}
.nav-mob {
    display: flex;
    flex-direction: row;
    gap: 1rem;
}
.nav-center {
    margin-top: 10px;
    justify-content: center;
}
.clothes-cat {
    height: 2rem;
}
.clothes-cat:hover {
  border-bottom: solid 1px #000000;
  
}
.logo {
    width: 120px;
    height: 110px;
    background-color: #FBFBFB;
    background-image: url("../assets/hnm_logo.png");
    background-size: 80px;
    background-repeat: no-repeat;
    background-position: center
} 
.logo-mob {
    width: 60px;
    height: 50px;
    background-color: #FBFBFB;
    background-image: url("../assets/hnm_logo.png");
    background-size: 90px;
    background-repeat: no-repeat;
    background-position: center;
    display: none;
 }
 .nav-mob {
    width: 400px;
 }
.nav-left{
    display: flex;
    flex-direction: row;
    margin-right: 5px;
}
.nav-right{
    display: flex;
    flex-direction: row;
    margin-right: 5px;
    justify-content: center;
    align-items: center;
}
.nvb {
    margin-right: 20px;
    display: flex;
    align-items: center;
    
}
 .clothes-cat {
    margin-right: 40px;
 }
  @media screen and (min-width: 1024px){
    .menu-icon{
        display:none;
    }
 }
 @media screen and (max-width: 1024px){
    .nav-left {
        display: none;
    }
    .logo {
        display: none;
    }
    .logo-mob {
        display: flex;
    }
    span {
        display: none;
    }
    .nav-center {
        display: none;
    }
       
 }
 /* ++++++++++++++++++++++++ Header End ++++++++++++++++++++++++++++++++++++ */
.shop {
    width: 100%;
    height: 500px;
    display: flex;
    margin-top: 50px;
    flex-direction: row;
    flex-wrap: wrap;
    justify-content: center;
   
    
}
 .shop-card {
    width: 250px;
    height: 300px;
    display: flex;
    
    flex-direction: row;
    justify-content: end;
    align-items: flex-end;
    padding-right: 30px;
    padding-bottom: 5px ;
    /* outline: dashed red; */
 }

 .p1 {
    background-image: url("../assets/pic1.jpg");
    background-size: 210px;
    background-repeat: no-repeat;
    background-position: center;
 }
 
 .p2 {
    background-image: url("../assets/pic2.jpg");
    background-size: 210px;
    background-repeat: no-repeat;
    background-position: center;
 }
 
 .p3 {
    background-image: url("../assets/pic3.jpg");
    background-size: 210px;
    background-repeat: no-repeat;
    background-position: center;
 }
 
 .p4 {
    background-image: url("../assets/pic4.jpg");
    background-size: 210px;
    background-repeat: no-repeat;
    background-position: center;
 }
 

